--- a/src/components/ToastPlayground/ToastPlayground.module.css
+++ b/src/components/ToastPlayground/ToastPlayground.module.css
@@ -91,14 +91,14 @@
 .radioWrapper {
   display: flex;
   flex-wrap: wrap;
-  gap: 4px 16px;
+  gap: 8px;
 }
 
 .radioWrapper label {
   display: flex;
   align-items: center;
   gap: 8px;
-  width: 100px;
+  /* width: 100px; */
 }
 
 .messageInput {
